fix updating classpath